--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </video>  
     <div class="gradient"></div>
 <div>
-    <a href="age_of_war.html">
+    <a href="ageofwar.html">
     <button id ="game">Age of War 3</button>
     </a>
 
@@ -22,7 +22,7 @@
     </a>
 
     <a href="certs.html">
-    <button id ="certs">Certifications</button>
+    <button id ="certs"></button>
     </a>
 </div>
 
