--- a/index.html
+++ b/index.html
@@ -32,6 +32,26 @@
         <div class="eye left"></div>
         <div class="eye right"></div>
     </div>
-    <script src="homescript.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+    document.addEventListener('mousemove', (e) => {
+        const eyes = document.querySelectorAll('.eye');
+        const smiley = document.querySelector('.smiley');
+        const smileyRect = smiley.getBoundingClientRect();
+
+        const smileyCenterX = smileyRect.left + smileyRect.width / 2;
+        const smileyCenterY = smileyRect.top + smileyRect.height / 2;
+
+        const angle = Math.atan2(e.clientY - smileyCenterY, e.clientX - smileyCenterX);
+
+        eyes.forEach(eye => {
+            const eyeX = Math.cos(angle) * 6;
+            const eyeY = Math.sin(angle) * 6;
+
+            eye.style.transform = `translate(${eyeX}px, ${eyeY}px)`;
+        });
+    });
+});
+    </script>
 </body>
 </html>
