--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <a href="certs.html">
     <button id ="certs"></button>
     </a>
+    <a href="dashboard.html">
+        <button id ="dashboard"></button>
+        </a>
 </div>
 
 <div class="paw1"></div>
@@ -32,26 +35,6 @@
         <div class="eye left"></div>
         <div class="eye right"></div>
     </div>
-    <script>
-    document.addEventListener('DOMContentLoaded', () => {
-        document.addEventListener('mousemove', (e) => {
-            const eyes = document.querySelectorAll('.eye');
-            const smiley = document.querySelector('.smiley');
-            const smileyRect = smiley.getBoundingClientRect();
-
-            const smileyCenterX = smileyRect.left + smileyRect.width / 2;
-            const smileyCenterY = smileyRect.top + smileyRect.height / 2;
-
-            const angle = Math.atan2(e.clientY - smileyCenterY, e.clientX - smileyCenterX);
-
-            eyes.forEach(eye => {
-                const eyeX = Math.cos(angle) * 6;
-                const eyeY = Math.sin(angle) * 6;
-
-                eye.style.transform = `translate(${eyeX}px, ${eyeY}px)`;
-        });
-    });
-});
-    </script>
+    <script src="homescript.js"></script>
 </body>
 </html>
