--- a/dashboard.html
+++ b/dashboard.html
@@ -180,11 +180,11 @@
         // Assign an image based on the item type
         let imgSrc = '';
         if (item.itemType === 'Router') {
-            imgSrc = 'router.png';
+            imgSrc = 'router.PNG';
         } else if (item.itemType === 'Cable') {
-            imgSrc = 'cable.png';
+            imgSrc = 'cable.PNG';
         } else if (item.itemType === 'Switch') {
-            imgSrc = 'switch.png';
+            imgSrc = 'switch.PNG';
         }
 
         cell2.innerHTML = `<img src="${imgSrc}" alt="${item.itemType}">`;
