--- a/dashboard.html
+++ b/dashboard.html
@@ -125,7 +125,7 @@
     #button2 {
         height: 100px;
         width: 100px;
-        background-image: url("x.png");
+        background-image: url("x.PNG");
         background-size: contain;
         background-position: center;
         background-color: #4b4b4b;
@@ -135,7 +135,7 @@
     #button3 {
         height: 100px;
         width: 100px;
-        background-image: url("notes.png");
+        background-image: url("notes.PNG");
         background-size: contain;
         background-position: center;
         background-color: #4b4b4b;
@@ -145,7 +145,7 @@
     #button4 {
         height: 100px;
         width: 100px;
-        background-image: url("router.png");
+        background-image: url("router.PNG");
         background-size: contain;
         background-position: center;
         background-color: #4b4b4b;
