--- a/dashboard.html
+++ b/dashboard.html
@@ -116,7 +116,7 @@
     #button1 {
         height: 90px;
         width: 90px;
-        background-image: url("check.png");
+        background-image: url("check.PNG");
         background-size: contain; /* Absolute positioning inside the container */
         background-color: #4b4b4b;
         border-radius: 15px;
