--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
 
 <div class="paw1"></div>
 <div class="paw2"></div>
-    <div class="smiley">
-        <div class="eye left"></div>
-        <div class="eye right"></div>
-    </div>
+<div class="eyes">
+    <div class="eye left"></div>
+    <div class="eye right"></div>
+</div>
+<div class="smiley"></div>
     <script src="homescript.js"></script>
 </body>
 </html>
