--- a/index.html
+++ b/index.html
@@ -1,41 +1,83 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
 <head>
-    <meta charset = "UTF-8">
-    <meta name = "viewport" content = "width = device-width, initial-scale= 1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="homestyle.css">
+
 </head>
 <body>
+
     <video class="video-background" autoplay muted loop>
         <source src="wildlife.mp4" type="video/mp4">
         Your browser does not support the video tag.
-    </video>  
+    </video>
     <div class="gradient"></div>
-<div>
-    <a href="ageofwar.html">
-    <button id ="game">Age of War 3</button>
-    </a>
 
-    <a href="artpage.html">
-    <button id ="art">Art Portfolio</button>
-    </a>
+    <!-- Tab Slider Section -->
+    <div class="tab-slider">
+        <div class="tab-slider-inner">
+            <button class="tab education-tab" onclick="scrollToTab(0)">Education</button>
+            <button class="tab projects-tab" onclick="scrollToTab(1)">Projects</button>
+            <button class="tab contacts-tab" onclick="scrollToTab(2)">Contacts</button>
+            <div class="slider"></div>
+        </div>
+    </div>
 
-    <a href="certs.html">
-    <button id ="certs"></button>
-    </a>
-    <a href="dashboard.html">
-        <button id ="dashboard"></button>
+    </div>
+
+    <div class="scroll-container">
+        <div class="scroll-content">
+            <div class="content active">
+
+                <h2>Education</h2>
+                <p>Harvard CS50 into to computer science<br><br>
+                    THM completed courses:
+                    <ul>
+                        <li>security Analyst Intro</li>
+                        <li>Pyramid of Pain</li>
+                        <li>Cyber Kill Chain</li>
+                    </ul>
+
+                </p>
+            </div>
+            <div class="content">
+                <h2>Projects</h2>
+                <p>nothing yettt</p>
+            </div>
+            <div class="content">
+                <h2>Contact</h2>
+                <p>moss.tanner1994@gmail.com</p>
+            </div>
+        </div>
+    </div>
+    
+
+    <div>
+        <a href="ageofwar.html">
+            <button id="game">Age of War 3</button>
         </a>
-</div>
+        <a href="artpage.html">
+            <button id="art">Art Portfolio</button>
+        </a>
+        <a href="certs.html">
+            <button id="certs"></button>
+        </a>
+        <a href="dashboard.html">
+            <button id="dashboard"></button>
+        </a>
+    </div>
 
-<div class="paw1"></div>
-<div class="paw2"></div>
-<div class="eyes">
-    <div class="eye left"></div>
-    <div class="eye right"></div>
-</div>
-<div class="smiley"></div>
+    <div class="paw1"></div>
+    <div class="paw2"></div>
+    <div class="eyes">
+        <div class="eye left"></div>
+        <div class="eye right"></div>
+    </div>
+    <div class="smiley"></div>
+
     <script src="homescript.js"></script>
+    <script src="tabscript.js"></script>
 </body>
 </html>
