--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="homestyle.css">
-
 </head>
 <body>
-
     <video class="video-background" autoplay muted loop>
         <source src="wildlife.mp4" type="video/mp4">
         Your browser does not support the video tag.
@@ -24,7 +22,40 @@
             <div class="slider"></div>
         </div>
     </div>
-
+    <div class="button-container">
+        <div class="button-scroll">
+            <!-- Add 10 buttons with background images -->
+            <a href="https://www.nature.org/en-us/">
+                <button class="scroll-button" style="background-image: url('tnc.jpeg');"></button>
+            </a>
+            <a href="link2.html">
+                <button class="scroll-button" style="background-image: url('button2.png');"></button>
+            </a>
+            <a href="link3.html">
+                <button class="scroll-button" style="background-image: url('button3.png');"></button>
+            </a>
+            <a href="link4.html">
+                <button class="scroll-button" style="background-image: url('button4.png');"></button>
+            </a>
+            <a href="link5.html">
+                <button class="scroll-button" style="background-image: url('button5.png');"></button>
+            </a>
+            <a href="link6.html">
+                <button class="scroll-button" style="background-image: url('button6.png');"></button>
+            </a>
+            <a href="link7.html">
+                <button class="scroll-button" style="background-image: url('button7.png');"></button>
+            </a>
+            <a href="link8.html">
+                <button class="scroll-button" style="background-image: url('button8.png');"></button>
+            </a>
+            <a href="link9.html">
+                <button class="scroll-button" style="background-image: url('button9.png');"></button>
+            </a>
+            <a href="link10.html">
+                <button class="scroll-button" style="background-image: url('button10.png');"></button>
+            </a>
+        </div>
     </div>
 
     <div class="scroll-container">
@@ -39,7 +70,9 @@
                         <li>Pyramid of Pain</li>
                         <li>Cyber Kill Chain</li>
                     </ul>
-
+                    <a href="https://tryhackme.com">
+                        <button id="thm"></button>
+                    </a>
                 </p>
             </div>
             <div class="content">
@@ -81,3 +114,4 @@
     <script src="tabscript.js"></script>
 </body>
 </html>
+
