--- a/dashboard.html
+++ b/dashboard.html
@@ -116,7 +116,7 @@
     #button1 {
         height: 90px;
         width: 90px;
-        background-image: url("check.PNG");
+        background-image: url("check.png");
         background-size: contain; /* Absolute positioning inside the container */
         background-color: #4b4b4b;
         border-radius: 15px;
@@ -125,7 +125,7 @@
     #button2 {
         height: 100px;
         width: 100px;
-        background-image: url("x.PNG");
+        background-image: url("x.png");
         background-size: contain;
         background-position: center;
         background-color: #4b4b4b;
@@ -135,7 +135,7 @@
     #button3 {
         height: 100px;
         width: 100px;
-        background-image: url("notes.PNG");
+        background-image: url("notes.png");
         background-size: contain;
         background-position: center;
         background-color: #4b4b4b;
@@ -145,7 +145,7 @@
     #button4 {
         height: 100px;
         width: 100px;
-        background-image: url("router.PNG");
+        background-image: url("router.png");
         background-size: contain;
         background-position: center;
         background-color: #4b4b4b;
@@ -304,5 +304,8 @@
 
 </body>
 </html>
+
+
+
 
 
