--- a/index.html
+++ b/index.html
@@ -16,45 +16,29 @@
     <!-- Tab Slider Section -->
     <div class="tab-slider">
         <div class="tab-slider-inner">
-            <button class="tab education-tab" onclick="scrollToTab(0)">Education</button>
+            <button class="tab education-tab" onclick="scrollToTab(0)">About Me</button>
             <button class="tab projects-tab" onclick="scrollToTab(1)">Projects</button>
             <button class="tab contacts-tab" onclick="scrollToTab(2)">Contacts</button>
             <div class="slider"></div>
         </div>
     </div>
+    <div class="charity-header"> Nature Charities</div>
     <div class="button-container">
         <div class="button-scroll">
-            <!-- Add 10 buttons with background images -->
             <a href="https://www.nature.org/en-us/">
                 <button class="scroll-button" style="background-image: url('tnc.jpeg');"></button>
             </a>
-            <a href="link2.html">
-                <button class="scroll-button" style="background-image: url('button2.png');"></button>
+            <a href="https://www.rainforest-alliance.org/">
+                <button class="scroll-button" style="background-image: url('rainforest.png');"></button>
             </a>
-            <a href="link3.html">
-                <button class="scroll-button" style="background-image: url('button3.png');"></button>
+            <a href="https://oceanconservancy.org/">
+                <button class="scroll-button" style="background-image: url('ocean.png');"></button>
             </a>
-            <a href="link4.html">
-                <button class="scroll-button" style="background-image: url('button4.png');"></button>
+            <a href="https://www.nei.org/take-action">
+                <button class="scroll-button" style="background-image: url('nei.png');"></button>
             </a>
-            <a href="link5.html">
-                <button class="scroll-button" style="background-image: url('button5.png');"></button>
-            </a>
-            <a href="link6.html">
-                <button class="scroll-button" style="background-image: url('button6.png');"></button>
-            </a>
-            <a href="link7.html">
-                <button class="scroll-button" style="background-image: url('button7.png');"></button>
-            </a>
-            <a href="link8.html">
-                <button class="scroll-button" style="background-image: url('button8.png');"></button>
-            </a>
-            <a href="link9.html">
-                <button class="scroll-button" style="background-image: url('button9.png');"></button>
-            </a>
-            <a href="link10.html">
-                <button class="scroll-button" style="background-image: url('button10.png');"></button>
-            </a>
+            <a href="https://www.nrdc.org/">
+                <button class="scroll-button" style="background-image: url('nrdc.png');"></button>
         </div>
     </div>
 
@@ -62,22 +46,16 @@
         <div class="scroll-content">
             <div class="content active">
 
-                <h2>Education</h2>
-                <p>Harvard CS50 into to computer science<br><br>
-                    THM completed courses:
-                    <ul>
-                        <li>security Analyst Intro</li>
-                        <li>Pyramid of Pain</li>
-                        <li>Cyber Kill Chain</li>
-                    </ul>
-                    <a href="https://tryhackme.com">
-                        <button id="thm"></button>
-                    </a>
+                <h2>About Me</h2>
+                <p>stuff about me
                 </p>
             </div>
             <div class="content">
                 <h2>Projects</h2>
-                <p>nothing yettt</p>
+                <p>python file hash verifier</p>
+                <p>python fork bomb obfuscated and stenographed as img.jpg</p>
+                <p>python hash cracker for brute forcing a list of hashed passwords</p>
+                <p>more information on cyber security page</p>
             </div>
             <div class="content">
                 <h2>Contact</h2>
@@ -88,6 +66,9 @@
     
 
     <div>
+        <a href="cyberportfolio.html">
+            <button class="cyber">cybersecurity portfolio</button>
+        </a>
         <a href="ageofwar.html">
             <button id="game">Age of War 3</button>
         </a>
@@ -114,4 +95,3 @@
     <script src="tabscript.js"></script>
 </body>
 </html>
-
