--- a/ageofwar.html
+++ b/ageofwar.html
@@ -9,3 +9,14 @@
 
 
     </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Age of War 3</title>
+    <body>
+        <h1> Under maintenance!!!</h1>
+
+
+    </body>
